--- a/TrackContest/index.html
+++ b/TrackContest/index.html
@@ -10,18 +10,18 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css">
+    <script src="https://apis.google.com/js/api.js"></script>
 </head>
 <body>
     <div id="hero">
     <h1>Upcoming CP Contests</h1>
-    <h2>This website is made to keep a tract of upcoming CP Contests hosted by Codeforces, AtCoder, LeetCode and CodeChef.</h2>
+    <h2>This website is made to keep a track of upcoming CP Contests hosted by Codeforces, AtCoder, LeetCode and CodeChef.</h2>
     </div>
     <div id="tablesContainer"></div>
+    <button id="authorize_button" style="display: none;">Authorize</button>
+    <button id="signout_button" style="display: none;">Sign Out</button>
 
     <script src="script.js"></script>
     <footer>Made with ❤️ by <a href="https://www.linkedin.com/in/sandipan-chakraborty-a2a764260/" target="_blank">Sandipan Chakraborty</a> using ChatGPT and Clist</footer>
 </body>
 </html>
-
-
-
